--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/electronic_store
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:roundhouse.proxy.rlwy.net}:${MYSQL_PORT:54763}/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=GfA6f24D6GADD-GDF4-Ed3C-2CaF3d61
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,3 +15,4 @@ spring.mvc.contentnegotiation.defaultContentType=application/json
 googleClientId= 118293484707-1l6ofq59tirob8db3694n4592eokipsm.apps.googleusercontent.com
 #googleseceret=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
 newpassword=sfseerhyrdhdfbsvsfefetfaf
+spring.profiles.active=prod
