--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.mvc.contentnegotiation.defaultContentType=application/json
 googleClientId= 118293484707-1l6ofq59tirob8db3694n4592eokipsm.apps.googleusercontent.com
 #googleseceret=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
 newpassword=sfseerhyrdhdfbsvsfefetfaf
-spring.profiles.active=prod
+spring.profiles.active=prod#
